# rusttcpgamedevscratch

./: Cargo.toml  README.md
docs/: multiplayer-sync-notes.md
src/: dumb_client.rs  main.rs  sketch.rs
