[package]
name = "rusttcpgamedevscratch"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "rusttcpgamedevscratch"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
